html structure added

--- a/index.html
+++ b/index.html
@@ -21,7 +21,32 @@
   <div class="container">
     <!--main section start-->
     <main>
-
+      <section class="movie-filter">
+        <div class="wrapper">
+          <div class="movie-containere">
+          <h1 class="heading">Movie Filter</h1>
+          <form action="#FIXME" name="form" class="form" method="post">
+            <div class="form-container">
+              <div class="input-container">
+                <input type="text" name="search" class="movie-input" placeholder="Search Movie">
+              </div>
+              <div class="input-container">
+                <input type="submit" name="submit" class="search-btn" value="Search">
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="movie-data">
+          <ul class="data-list">
+            <li class="data-item">Sr No.</li>
+            <li class="data-item">Release Date</li>
+            <li class="data-item">Movie Name</li>
+            <li class="data-item">Actor Name</li>
+          </ul>
+          <ul class="data-list">movie data</ul>
+        </div>
+      </div>
+      </section>
     </main>
     <!--main section end-->
   </div>
