html structure modified

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <form action="#FIXME" name="form" class="form" method="post">
               <div class="form-container">
                 <div class="input-container">
-                  <input type="text" name="search" class="movie-input" placeholder="Search Movie">
+                  <input type="text" name="search" class="movie-input" placeholder="Search Movie Here..">
                   <span class="error">error</span>
                 </div>
                 <div class="input-control">
@@ -39,12 +39,6 @@
           </div>
           <div class="movie-data">
             <h2 class="sub-heading">Your Movies</h2>
-            <ul class="data-list">
-              <li class="data-item">Sr No.</li>
-              <li class="data-item">Release Date</li>
-              <li class="data-item">Movie Name</li>
-              <li class="data-item">Actor Name</li>
-            </ul>
           </div>
         </div>
       </section>
